Custom Action fix (action_studiengang)

--- a/data/stories/complete_stories.yml
+++ b/data/stories/complete_stories.yml
@@ -133,7 +133,7 @@ stories:
   - action: action_studiengang_list_sr
   - intent: studiengang
     entities:
-      - studiengang: Cyver Security
+      - studiengang: Cyber Security
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
