--- a/data/synonyms/info.yml
+++ b/data/synonyms/info.yml
@@ -3,6 +3,9 @@ nlu:
 - synonym: Regelstudienzeit
   examples: |
     - Semester
+    - lange
+    - lang
+    - dauer
 - synonym: Berufsbild
   examples: |
     - beruflich
