--- a/domain.yml
+++ b/domain.yml
@@ -15,8 +15,6 @@ intents:
     use_entities: true
 - studiengang:
     use_entities: true
-- begrueßung_name:
-    use_entities: true
 - verabschiedung:
     use_entities: true
 - bestaetigung:
@@ -50,15 +48,9 @@ intents:
 entities:
 - abschluss
 - info
-- name
 - studiengang
 - studienrichtung
 slots:
-  name:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
-    influence_conversation: true
   abschluss:
     type: rasa.shared.core.slots.TextSlot
     initial_value: null
@@ -131,26 +123,15 @@ slots:
     influence_conversation: true
 responses:
   utter_begrueßung:
-  - text: Guten Tag! Mein Name ist Lütke. Wie kann ich Ihnen weiterhelfen?
-  - text: Seid gegrüßt. Ich helfe Ihnen gerne bei der Suche nach Informationen über Studiengänge der Hochschule Deggendorf. Über welchen Studiengang möchten Sie etwas erfahren?
-  - text: Lütke zu Diensten, stehts an Ihrer Seite mit Rat und Tat. Ich habe über die Jahre ein reiches Wissen über die Studiengänge der Technischen Hochschule Deggendorf erlangt und helfe Ihnen nun die richtigen Informationen zu finden.
-  - text: Guten Tag. Was verschlägt Sie den zu mir? Ich kann Ihnen gernen weiterhelfen, wenn Sie fragen zu den Studiengägen der Technischen Hochschule haben.
-  - text: Halli Hallo! Wo drückt der Schuhe? Möchten Sie etwas über einen Studiengang der Technischen Hochschule Deggendorf erfahren?
-  - text: Herzlich willkommen bei Lütke dem Studiengangsauskungstsassistent der Hochschule Deggendorf.
+  - text: Herzlich willkommen bei Lütke dem Studiengangsauskunfstsassistent der Hochschule Deggendorf. Was möchten Sie wissen?
   utter_verabschiedung:
-  - text: Auf wiedersehen!
-  utter_verabschiedung_name:
-  - text: Auf wiedersehen {name} !
+  - text: Ich hoffe ich konnte Ihnen helfen. Auf wiedersehen!
   utter_witz:
   - text: Wie viele Microsoft-Programmierer braucht man um eine Gluehbirne zu wechseln? Keinen, Dunkelheit wird zum neuen Standard erklaert.
-  utter_witz_name:
-  - text: Hier ein Witz für dich {name}. Wie viele Microsoft-Programmierer braucht man um eine Gluehbirne zu wechseln? Keinen, Dunkelheit wird zum neuen Standard erklaert.
   utter_abbruch:
   - text: Stopp!
   utter_bestaetigung:
   - text: Freut mich!
-  utter_bestaetigung_name:
-  - text: Freut mich, {name}!
   utter_allgemein:
   - text: Es würde lange dauern  Ihnen jetzt alle Studiengänge aufzulisten. Am besten spezifizieren Sie ihre Anfrage etwas. Welche Studienrichtung interessiert Sie denn?
   - text: Ich bin leider nicht dafür qualifiziert Ihnen einen Studienberatung anzubieten. Aber welche Studienrichtung interessiert Sie denn?
@@ -166,24 +147,24 @@ responses:
   - text: 'Wie sie kennen mich nicht? Dann will ich mich doch vorstellen: Ich bin Lütke, der König des Wissens. Ich bin der beste meines Faches, der beste um Ihnen die Studiengänge näher zu Bringen und Sie in ein wissensreiches Leben zu entführen.'
   utter_studienrichtung:
   - text: 'Das ist eine weise Entscheidung. In der Studienrichtung "{studienrichtung}" bieten wir zum Beispiel diese Studiengänge an:'
+  utter_studienrichtung_auflisten:
+  - text: 'Dies sind alle uns Verfügbaren Studienrichtungen:'
   utter_studienrichtung_nicht_vorhanden:
-  - text: 'Oh. Verzeihen Sie mir, aber wir bieten leider nichts zu dieser Studienrichtung an. Wählen Sie doch bitte eine aus den folgenden aus:'
+  - text: 'Oh. Verzeihen Sie mir, aber die technische Hochschule bietet nur folgenden Studienrichtungen an: '
   utter_studiengang:
-  - text: 'Sehr gute Wahl! Auf der Hochschulseite steht zu dem Studiengang "{studiengang}" folgendendes:'
-  utter_studiengang_nicht_vorhanden:
+  - text: Sehr gute Wahl! Einen Moment bitte. Ich schau kurz im Verzeichnis der Hochschule nach.
+  utter_studiengang_nicht_vorhanden_sr:
   - text: 'Das tut mir leid, wir bieten {studiengang} leider nicht an. Wählen Sie doch bitte einen aus der Ihr präferierten Richtung aus:'
-  utter_weiterleitung_an_studienrichtung:
+  utter_studiengang_nicht_vorhanden:
   - text: 'Diesen Studiengang kann ich leider nicht im Verzeichniss finden. Die Hochschule bietet nur Studiengänge in folgenden Richtungen an:'
   utter_info_auswahl_hilfe2:
   - text: Wenn Sie immer noch nicht wissen nach was sie fragen sollen, nennen Sie einfach das Zauberwort listall, machen Sie es sich gemütlich und ich erzähle Ihnen alles was ich über den Studiengang {studiengang} weiß.
   utter_info_nachfrage:
   - text: Möchten Sie noch mehr über diesen Studiengang erfahren? Im Inhaltsverzeichnis habe ich dazu noch folgende Kategorien gefunden.
-  - text: Ich habe noch mehr Wissen zu diesem Studiengang gespeichert. Über welchen Aspekt möchten Sie mehr erfahren?
-  - text: Ich kann Ihnen noch viel mehr über "{studiengang}" erzählen. Was interessiert Sie noch zu dem Studiengang?
+  - text: In meinem Nachschlagewerk konnte ich noch mehr Information zu den Studiengang finden. Nenn Sie mir einfach eine der folgenden Kategorien, wenn Sie darüber etwas erfahren möchten.
+  - text: Ich kann Ihnen noch viel mehr über "{studiengang}" erzählen. Welche der folgenden Kategorien soll ich Ihnen vorlesen?
   utter_nachfrage_ende:
   - text: Kann ich Ihnen sonst noch irgendwie behilflich sein? Möchten Sie zu einem anderen Studiengang noch mehr erfahren?
-  utter_abschluss:
-  - text: Ich hoffe ich konnte Ihnen helfen!
   utter_ansprechpartner:
   - text: 'Tut mir leid. Für diese Frage bin ich nicht der richtige Ansprechpartner. Wenden Sie sich mit dieser Frage bitte an die Studienberatung der Hochschule. Sie finden diese unter der E-Mail-Adresse: ZSB@TH-DEG.DE.'
   utter_sichere_nachfrage:
@@ -192,7 +173,7 @@ responses:
   - text: 'Hier bitte sehr. Im folgenden habe ich Ihnen noch weitere Studiengänge der Studienrichtung {studienrichtung} rausgesucht:'
 actions:
 - action_info
-- action_info_list
+- action_info_nachfrage
 - action_info_list_all
 - action_studiengang
 - action_studiengang_list
