Scraper Update 2.0 API Update 2.9 Stories Update 2.0 Rule Update 1.0

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -189,6 +189,14 @@ nlu:
     - Was machst du?
     - Wie benutze ich dich?
 
+- intent: abschluss
+  examples: |
+    - [Master](abschluss)
+    - [Bachelor](abschluss)
+    - den [Master](abschluss) Studiengang
+    - den [Bachelor](abschluss) Studiengang
+    - [Wirtschaftsinformatik](studiengang) im [bachelor](abschluss)
+
 - synonym: Bautechnik und Umweltwissenschaften
   examples: |
     - Architektur
